--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Na Wang
+title: Na Wang-Maier
 ---
 <div class="home">
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-153085826-1"></script>
@@ -14,7 +14,7 @@ title: Na Wang
 
 <img src="03.jpg" alt="Na Wang pic" style="width:240px;height:240px;" title="Na Wang"; algin="middle">
 <br>
-Welcome! My name is Na and I am a data science and tech enthusiast based in Paris currently.
+Welcome! My name is Na Wang-Maier and I am a data science and tech enthusiast based in Paris currently.
 
 <br><br>
 My interests lie in data science, machine learning and AI-related technologies. I would like to furthur explore the use case of AI and machine learning for business and societal applications, including marketing, e-commerce and smart cities. I am also interested in thinking about the impacts of AI to the society and believe as well as practice "AI for ALL, AI for GOOD". 
